--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div style="backgroud-color: grey;
 text-align: center;padding: 40px;"
 > 
-<link rel="stylesheet" type="text/css" href="file:///data1/陈阳/随笔/程序/html课程/kuangjia.css"/>
+<link rel="stylesheet" type="text/css" href="kuangjia.css/kuangjia.css"/>
 
  <style type="text/css">
 *{ margin:0; padding:0}
