Fix stylesheet link in index.html
Updated stylesheet link to point to a valid URL.

Signed-off-by: liupanshuichenyang <2825078473@qq.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div style="backgroud-color: grey;
 text-align: center;padding: 40px;"
 > 
-<link rel="stylesheet" type="text/css" href="kuangjia.css/kuangjia.css"/>
+<link rel="stylesheet" type="text/css" href="https://github.com/liupanshuichenyang/chen-yang-wangye/tree/main/kuangjia.css"/>
 
  <style type="text/css">
 *{ margin:0; padding:0}
