--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div style="backgroud-color: grey;
 text-align: center;padding: 40px;"
 > 
-<link rel="stylesheet" type="text/css" href="https://github.com/liupanshuichenyang/chen-yang-wangye/tree/main/kuangjia.css"/>
+<link rel="stylesheet" type="text/css" href="/chen-yang-wangye/kuangjia.css"/>
 
  <style type="text/css">
 *{ margin:0; padding:0}
@@ -91,7 +91,7 @@ color:#ff7575;}
 <div id="youce2">
 <p class="left-align4">本科</p>
 <p class="left-align4">理学学士</p>
-<p class="left-align4">2000.09</p>
+<p class="left-align4">2000.06</p>
 </div>
 </div>
 </div>
