Add additional writing and novel links in index.html
Signed-off-by: liupanshuichenyang <2825078473@qq.com>

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ color:#ff7575;}
 <p class="left-align3">其他技能</p>
 <p class="left-align1">1. 写作技能：各类文案，目前代表作有
 <a href="https://mp.weixin.qq.com/s/Rc1Lq8ZwUrU4ZcFPJf0mPQ">《浅论中国共产党的先进性》、</a> 
-<a href="https://mp.weixin.qq.com/s/93koWry978joVIOKd38pDg">《论当前文旅事业当如何破局》</a> 等</p>
+<a href="https://mp.weixin.qq.com/s/93koWry978joVIOKd38pDg">《论当前文旅事业当如何破局》</a> 
+<a href="https://changdunovel.com/wap/share-v2.html?aid=1967&book_id=7563685339206781977&share_type=0&share_code=-umou5KN0EyLXVgJHSwYTWOaBia9YiMhtB5ARQsayCc%3D&uid=d55a43fc3275fd271b94f37728203d08&share_id=ipjp_2Zi9k24m6POhQWys9Yr-QRaybepisfb5k5zMKI%3D&use_open_launch_app=1&user_id=41d9381cccba458fc1a2c51c17109d2c&did=d55a43fc3275fd271b94f37728203d08&entrance=book_detail&zlink=https%3A%2F%2Fzlink.fqnovel.com%2FdhVGe&gd_label=click_schema_lhft_share_novelapp_android&source_channel=wechat&share_channel=wechat&type=book&bg=f2dac2-f7e9da-403123&book_detail_new_style=1&share_timestamp=1766481137&share_token=4513b3fc-9df9-4a1a-9be7-351ca6906183">小说《元变》等</a></p>
 <p class="left-align1">2.办公技能：Word（如使用制表位）、Excel（如使用vlookup函数）、PPT</p>
 <p class="left-align1">3. 语言技能：普通话、英语四级等</p>
 </div>
