--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ color:#ff7575;}
 <h1 style="color:blue">陈阳个人主页</h1>
 <div id="toubu">
 <div id="tupian">
-<img src="file:///data1/陈阳/选调生工作/图片/个人图片/蓝白渐变.jpg"alt="蓝白渐变图" width="98px" height="137px">
+<img src="/chen-yang-wangye/蓝白渐变.jpg"alt="蓝白渐变图" width="98px" height="137px">
 </div>
 <div id="zhuye">
 <div id="biaoti">
