Update image source in index.html
Signed-off-by: liupanshuichenyang <2825078473@qq.com>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ color:#ff7575;}
 <h1 style="color:blue">陈阳个人主页</h1>
 <div id="toubu">
 <div id="tupian">
-<img src="/chen-yang-wangye/蓝白渐变.jpg"alt="蓝白渐变图" width="98px" height="137px">
+<img src="/https://github.com/liupanshuichenyang/chen-yang-wangye/blob/main/%E8%93%9D%E7%99%BD%E6%B8%90%E5%8F%98.jpg?raw=true.jpg"alt="蓝白渐变图" width="98px" height="137px">
 </div>
 <div id="zhuye">
 <div id="biaoti">
