Update job title in index.html
Signed-off-by: liupanshuichenyang <2825078473@qq.com>

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ color:#ff7575;}
 <p class="left-align3">工作经历</p>
 <p class="left-align1">2. 2024.07-2024.09  云南定向选调生到墨江县发改局工作</p>
 <p class="left-align1">2. 2024.09-2026.09  选调生到村任职锻炼（瓦路村村主任助理）</p>
-<p class="left-align1">3. 2026.09-至今  墨江县发展和改革局行政编工作人员</p>
+<p class="left-align1">3. 2026.09-至今  墨江县发展和改革局工作人员</p>
 </div>
 <div id="zhuanyejineng">
 <p class="left-align3">专业技能</p>
